vendor/pin-project-1.0.7/tests/ui/cfg/packed_sneaky.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> $DIR/packed_sneaky.rs:6:27
  |
6 | #[hidden_repr_cfg_not_any(packed)] //~ ERROR may not be used on #[repr(packed)] types
  |                           ^^^^^^
